--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "tutoring",
   "version": "0.1.0",
   "private": true,
+  "optionalDependencies": {
+    "fsevents": "^2.0.7"
+}
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
