--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "optionalDependencies": {
     "fsevents": "^2.3.2"
 },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
+},
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
