--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "optionalDependencies": {
-    "fsevents": "^2.3.2"
+    "fsevents": "^2.3.2",
+    "fsevents": "^1.2.13"
 },
   "optionalDependencies": {
     "fsevents": "^2.3.2"
